# surprise-models

./: pyproject.toml
docs/: git-fork-workflow-guide.md  uv-workflow-guide.md
surprise_models/: generate_embeddings.py  generate_embeddings_batched.py  vis_safetensor.ipynb  vis_safetensor.py
