[project]
name = "surprise-models"
version = "0.1.0"
description = "Surprise models package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "safetensors>=0.5.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchaudio = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
]
ignore = [
    # "E501",  # line too long (handled by black)
]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
]
